added scripts in package.json

--- a/lab09-kaylee/package.json
+++ b/lab09-kaylee/package.json
@@ -19,7 +19,9 @@
   },
   "scripts": {
     "test": "mocha",
-    "start": "node server.js"
+    "start": "node server.js",
+    "lint": "eslint /**",
+    "watch": "nodemon server.js"
   },
   "author": "Kaylee Alvarado",
   "license": "MIT"
